Fix header width on mobile

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -29,6 +29,12 @@
 
   gap: 2rem;
 }
+@media (max-width: 768px) {
+  .header-content {
+    flex-wrap: nowrap;
+  }
+}
+
 .header-content.open {
   background-color: var(--globalnav-background-light);
 }
